@@ -31,7 +31,7 @@ ProDy = [
 		]},
 		{"tag": "section", "text": "2e. Hybrid simulations", "openItem": "True", "children": [
 			{"tag": "protocol", "value": "ProDyClustENM", "text": "ClustENM(D) hybrid simulation"}
-		]}	
+		]}
 	]},
 	{"tag": "section", "text": "3. Dynamics analysis", "openItem": "True", "children": [
 		{"tag": "protocol", "value": "ProDyEdit", "text": "Edit Modes"},
